<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="signOut"
        android:padding="@dimen/text_small_margin"
        android:text="@string/mainpage_sign_out"
        android:textSize="@dimen/text_sub_header_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:onClick="navigateProfileOverview"
            android:padding="@dimen/text_medium_margin"
            android:text="@string/mainpage_navigate_profile"
            android:textSize="@dimen/text_large_header_size" />

        <TextView
            android:id="@+id/textview_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:onClick="navigateEventSearch"
            android:padding="@dimen/text_medium_margin"
            android:text="@string/mainpage_navigate_search"
            android:textSize="@dimen/text_large_header_size" />

        <TextView
            android:id="@+id/textview_create_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:onClick="navigateEventCreate"
            android:padding="@dimen/text_medium_margin"
            android:text="@string/mainpage_navigate_create_event"
            android:textSize="@dimen/text_large_header_size" />

        <TextView
            android:id="@+id/textview_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:onClick="navigateEventMap"
            android:padding="@dimen/text_medium_margin"
            android:text="@string/app_name"
            android:textSize="@dimen/text_large_header_size" />

    </LinearLayout>
</RelativeLayout>