<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alfon.eventtest.CreateUserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edittext_firstname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:inputType="textCapWords"
                    android:imeOptions="actionNext"
                    android:hint="@string/firstname_edittext_hint" />

                <EditText
                    android:id="@+id/edittext_lastname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:inputType="textCapWords"
                    android:imeOptions="actionNext"
                    android:hint="@string/lastname_edittext_hint" />

            </LinearLayout>

            <EditText
                android:id="@+id/edittext_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:hint="@string/username_edittext_hint" />

            <EditText
                android:id="@+id/edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_edittext_hint"
                android:lines="1"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edittext_password"
                style="@style/StandardEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_edittext_hint"
                android:lines="1"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/select_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="selectBirthDate"
                android:padding="@dimen/text_tiny_margin"
                android:text="@string/select_birthdate"
                android:textSize="@dimen/text_header_size" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/create_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/colored_ripple"
        android:onClick="createAccount">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingBottom="@dimen/button_medium_padding"
            android:paddingLeft="@dimen/button_large_padding"
            android:paddingRight="@dimen/button_large_padding"
            android:paddingTop="@dimen/button_medium_padding"
            android:text="@string/create_event_button"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_header_size" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/creating_user_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentBottom="true">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:paddingBottom="@dimen/button_medium_padding"
            android:paddingLeft="@dimen/button_large_padding"
            android:paddingRight="@dimen/button_large_padding"
            android:paddingTop="@dimen/button_medium_padding" />

    </RelativeLayout>


</RelativeLayout>