<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alfon.eventtest.SignInActivity">

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_edittext_hint"
            style="@style/StandardEditText"/>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_edittext_hint"
            android:inputType="textPassword"
            style="@style/StandardEditText"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/colored_ripple"
                android:padding="@dimen/button_small_padding"
                android:onClick="signIn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/sign_in_button_text"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/signing_in_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_small_padding"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </RelativeLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_account_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/colored_ripple"
            android:padding="@dimen/button_small_padding"
            android:onClick="navigateCreateAccount">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/create_account_button_text"
                android:textAllCaps="true"
                android:textStyle="bold"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
