<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alfon.eventtest.ConfirmationInformationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/text_medium_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/button_medium_padding"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_tiny_margin"
            android:includeFontPadding="false"
            android:text="@string/confirm_account_header"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_large_header_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/confirm_account_information"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_sub_header_size" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/confirmed_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/colored_ripple"
        android:onClick="continueToAppAndRegisterForPush">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingBottom="@dimen/button_medium_padding"
            android:paddingLeft="@dimen/button_large_padding"
            android:paddingRight="@dimen/button_large_padding"
            android:paddingTop="@dimen/button_medium_padding"
            android:text="@string/continue_button_text"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_header_size" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/confirmed_account_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:paddingBottom="@dimen/button_medium_padding"
            android:paddingLeft="@dimen/button_large_padding"
            android:paddingRight="@dimen/button_large_padding"
            android:paddingTop="@dimen/button_medium_padding" />

    </RelativeLayout>

</RelativeLayout>
