<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.example.alfon.eventtest.EventDetailsActivity" />

        <variable
            name="event"
            type="com.example.alfon.eventtest.Event" />
    </data>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@{event.name}"
                        android:textSize="@dimen/text_header_size"
                        android:gravity="center"
                        tools:text="Eventets namn"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{event.createdBy.fullName}"
                        android:textSize="@dimen/text_sub_header_size"
                        android:gravity="center"
                        tools:text="Alfons Lange"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/text_small_margin"
                    android:gravity="center">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:onClick="showPopup"
                        android:background="?attr/selectableItemBackground"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_more_vert_24dp" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/text_small_margin"
                    android:paddingLeft="@dimen/text_small_margin"
                    android:paddingRight="@dimen/text_small_margin"
                    android:paddingTop="@dimen/text_small_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/event_details_time" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{EventDetailsActivity.formatDateStartToEnd(event.startTime, event.endTime)}" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{EventDetailsActivity.formatTimeStartToEnd(event.startTime, event.endTime)}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/text_small_margin"
                    android:paddingLeft="@dimen/text_small_margin"
                    android:paddingRight="@dimen/text_small_margin"
                    android:paddingTop="@dimen/text_small_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/event_details_description" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{event.description}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/text_small_margin"
                    android:paddingLeft="@dimen/text_small_margin"
                    android:paddingRight="@dimen/text_small_margin"
                    android:paddingTop="@dimen/text_small_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/event_details_location" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{event.location.shortName}" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>